# tuwunel

./: .dockerignore  .gitignore  .typos.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NEWS.md  README.md  RELEASE.md  book.toml  clippy.toml  conduwuit-example.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  tuwunel-example.toml
.cargo/: config.toml
arch/: tuwunel.service
debian/: README.md  config  postinst  (+2 more)
src/admin/: Cargo.toml  admin.rs  context.rs  mod.rs  processor.rs  utils.rs
src/admin/appservice/: commands.rs  mod.rs
src/admin/check/: commands.rs  mod.rs
src/admin/debug/: commands.rs  mod.rs  tester.rs
src/admin/federation/: commands.rs  mod.rs
src/admin/media/: commands.rs  mod.rs
src/admin/query/: account_data.rs  appservice.rs  globals.rs  mod.rs  presence.rs  pusher.rs  raw.rs  resolver.rs  room_alias.rs  room_state_cache.rs  room_timeline.rs  sending.rs  short.rs  users.rs
src/admin/room/: alias.rs  commands.rs  directory.rs  info.rs  mod.rs  moderation.rs
src/admin/server/: commands.rs  mod.rs
src/admin/user/: commands.rs  mod.rs
src/api/: Cargo.toml  mod.rs  router.rs
src/api/client/: account.rs  account_data.rs  alias.rs  appservice.rs  backup.rs  capabilities.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  media_legacy.rs  membership.rs  message.rs  mod.rs  openid.rs  presence.rs  profile.rs  push.rs  read_marker.rs  redact.rs  register.rs  relations.rs  report.rs  search.rs  send.rs  session.rs  space.rs  state.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  typing.rs  unstable.rs  unversioned.rs  user_directory.rs  utils.rs  voip.rs  (+1 more)
src/api/client/membership/: ban.rs  forget.rs  invite.rs  join.rs  kick.rs  knock.rs  leave.rs  members.rs  mod.rs  unban.rs
src/api/client/room/: aliases.rs  create.rs  event.rs  initial_sync.rs  summary.rs  upgrade.rs
src/api/client/session/: appservice.rs  jwt.rs  ldap.rs  logout.rs  mod.rs  password.rs  refresh.rs  token.rs
src/api/client/sync/: mod.rs  v3.rs  v4.rs  v5.rs
src/api/router/: args.rs  auth.rs  handler.rs  request.rs  response.rs  state.rs
src/api/router/auth/: appservice.rs  server.rs  uiaa.rs
src/api/server/: backfill.rs  event.rs  event_auth.rs  get_missing_events.rs  hierarchy.rs  invite.rs  key.rs  make_join.rs  make_knock.rs  make_leave.rs  media.rs  openid.rs  publicrooms.rs  query.rs  send.rs  send_join.rs  send_knock.rs  send_leave.rs  state.rs  state_ids.rs  user.rs  utils.rs  version.rs  well_known.rs
src/database/: Cargo.toml  benches.rs  de.rs  deserialized.rs  engine.rs  handle.rs  keyval.rs  map.rs  maps.rs  mod.rs  pool.rs  ser.rs  stream.rs  tests.rs  util.rs  watchers.rs
src/database/engine/: backup.rs  cf_opts.rs  context.rs  db_opts.rs  descriptor.rs  files.rs  logger.rs  memory_usage.rs  open.rs  repair.rs
src/database/map/: clear.rs  compact.rs  contains.rs  count.rs  del.rs  get.rs  get_batch.rs  insert.rs  keys.rs  keys_from.rs  keys_prefix.rs  put.rs  qry.rs  qry_batch.rs  remove.rs  rev_keys.rs  rev_keys_from.rs  rev_keys_prefix.rs  rev_stream.rs  rev_stream_from.rs  rev_stream_prefix.rs  stream.rs  stream_from.rs  stream_prefix.rs  watch.rs
src/database/pool/: configure.rs
src/database/stream/: items.rs  items_rev.rs  keys.rs  keys_rev.rs
src/main/: Cargo.toml  clap.rs  logging.rs  main.rs  mods.rs  restart.rs  runtime.rs  sentry.rs  server.rs  signal.rs
src/router/: Cargo.toml  layers.rs  mod.rs  request.rs  router.rs  run.rs
src/router/serve/: mod.rs  plain.rs  tls.rs  unix.rs
src/service/: Cargo.toml  manager.rs  migrations.rs  mod.rs  once_services.rs  service.rs  services.rs
src/service/account_data/: mod.rs
src/service/admin/: console.rs  create.rs  execute.rs  grant.rs  mod.rs
src/service/appservice/: mod.rs  namespace_regex.rs  registration_info.rs
src/service/client/: mod.rs
src/service/config/: mod.rs
src/service/deactivate/: mod.rs
src/service/emergency/: mod.rs
src/service/federation/: execute.rs  format.rs  mod.rs
src/service/globals/: data.rs  mod.rs
src/service/key_backups/: mod.rs
src/service/media/: blurhash.rs  data.rs  migrations.rs  mod.rs  preview.rs  remote.rs  tests.rs  thumbnail.rs
src/service/membership/: ban.rs  invite.rs  join.rs  kick.rs  leave.rs  mod.rs  unban.rs
src/service/presence/: data.rs  mod.rs  presence.rs
src/service/pusher/: mod.rs
src/service/resolver/: actual.rs  cache.rs  dns.rs  fed.rs  mod.rs  well_known.rs
src/service/rooms/: mod.rs
src/service/rooms/alias/: mod.rs  remote.rs
src/service/rooms/auth_chain/: data.rs  mod.rs
src/service/rooms/delete/: mod.rs
src/service/rooms/directory/: mod.rs
src/service/rooms/event_handler/: acl_check.rs  fetch_and_handle_outliers.rs  fetch_auth.rs  fetch_prev.rs  fetch_state.rs  handle_incoming_pdu.rs  handle_outlier_pdu.rs  handle_prev_pdu.rs  mod.rs  parse_incoming_pdu.rs  resolve_state.rs  state_at_incoming.rs  upgrade_outlier_pdu.rs
src/service/rooms/lazy_loading/: mod.rs
src/service/rooms/metadata/: mod.rs
src/service/rooms/outlier/: mod.rs
src/service/rooms/pdu_metadata/: data.rs  mod.rs
src/service/rooms/read_receipt/: data.rs  mod.rs
src/service/rooms/search/: mod.rs
src/service/rooms/short/: mod.rs
src/service/rooms/spaces/: mod.rs  pagination_token.rs  tests.rs
src/service/rooms/state/: mod.rs
src/service/rooms/state_accessor/: mod.rs  room_state.rs  server_can.rs  state.rs  user_can.rs
src/service/rooms/state_cache/: mod.rs  update.rs  via.rs
src/service/rooms/state_compressor/: mod.rs
src/service/rooms/threads/: mod.rs
src/service/rooms/timeline/: append.rs  backfill.rs  build.rs  create.rs  data.rs  mod.rs  redact.rs
src/service/rooms/typing/: mod.rs
src/service/rooms/user/: mod.rs
src/service/sending/: appservice.rs  data.rs  dest.rs  mod.rs  sender.rs
src/service/server_keys/: acquire.rs  get.rs  keypair.rs  mod.rs  request.rs  sign.rs  verify.rs
src/service/sync/: mod.rs  watch.rs
src/service/transaction_ids/: mod.rs
src/service/uiaa/: mod.rs
src/service/users/: device.rs  keys.rs  ldap.rs  mod.rs  profile.rs
(+193 files in other folders)
