[package]
name = "tuwunel_admin"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"tuwunel-core/brotli_compression",
	"tuwunel-service/brotli_compression",
]
bzip2_compression = [
	"tuwunel-database/bzip2_compression",
	"tuwunel-service/bzip2_compression",
]
gzip_compression = [
	"tuwunel-core/gzip_compression",
	"tuwunel-service/gzip_compression",
]
io_uring = [
	"tuwunel-database/io_uring",
	"tuwunel-service/io_uring",
]
jemalloc = [
	"tuwunel-core/jemalloc",
	"tuwunel-database/jemalloc",
	"tuwunel-service/jemalloc",
]
jemalloc_conf = [
	"tuwunel-core/jemalloc_conf",
	"tuwunel-database/jemalloc_conf",
	"tuwunel-service/jemalloc_conf",
]
jemalloc_prof = [
	"tuwunel-core/jemalloc_prof",
	"tuwunel-database/jemalloc_prof",
	"tuwunel-service/jemalloc_prof",
]
jemalloc_stats = [
	"tuwunel-core/jemalloc_stats",
	"tuwunel-database/jemalloc_stats",
	"tuwunel-service/jemalloc_stats",
]
lz4_compression = [
	"tuwunel-database/lz4_compression",
	"tuwunel-service/lz4_compression",
]
release_max_log_level = [
	"tuwunel-core/release_max_log_level",
	"tuwunel-database/release_max_log_level",
	"tuwunel-service/release_max_log_level",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
	"log/max_level_trace",
	"log/release_max_level_info",
]
zstd_compression = [
	"tuwunel-core/zstd_compression",
	"tuwunel-database/zstd_compression",
	"tuwunel-service/zstd_compression",
]

[dependencies]
base64.workspace = true
clap.workspace = true
tuwunel-core.workspace = true
tuwunel-database.workspace = true
tuwunel-macros.workspace = true
tuwunel-service.workspace = true
const-str.workspace = true
ctor.workspace = true
futures.workspace = true
log.workspace = true
ruma.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
