[package]
name = "tuwunel_api"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
brotli_compression = [
	"tuwunel-core/brotli_compression",
	"tuwunel-service/brotli_compression",
	"reqwest/brotli",
]
bzip2_compression = [
	"tuwunel-service/bzip2_compression",
]
element_hacks = [
	"tuwunel-service/element_hacks",
]
gzip_compression = [
	"tuwunel-core/gzip_compression",
	"tuwunel-service/gzip_compression",
	"reqwest/gzip",
]
io_uring = [
	"tuwunel-service/io_uring",
]
jemalloc = [
    "tuwunel-core/jemalloc",
    "tuwunel-service/jemalloc",
]
jemalloc_conf = [
	"tuwunel-core/jemalloc_conf",
	"tuwunel-service/jemalloc_conf",
]
jemalloc_prof = [
	"tuwunel-core/jemalloc_prof",
	"tuwunel-service/jemalloc_prof",
]
jemalloc_stats = [
	"tuwunel-core/jemalloc_stats",
	"tuwunel-service/jemalloc_stats",
]
ldap = [
	"tuwunel-service/ldap",
]
lz4_compression = [
	"tuwunel-service/lz4_compression",
]
release_max_log_level = [
	"tuwunel-core/release_max_log_level",
	"tuwunel-service/release_max_log_level",
	"log/max_level_trace",
	"log/release_max_level_info",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
]
zstd_compression = [
	"tuwunel-core/zstd_compression",
	"tuwunel-service/zstd_compression",
	"reqwest/zstd",
]

[dependencies]
async-trait.workspace = true
axum-client-ip.workspace = true
axum-extra.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
const-str.workspace = true
ctor.workspace = true
futures.workspace = true
hmac.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
ipaddress.workspace = true
itertools.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
ruma.workspace = true
serde_html_form.workspace = true
serde_json.workspace = true
serde.workspace = true
sha1.workspace = true
tokio.workspace = true
tracing.workspace = true
tuwunel-core.workspace = true
tuwunel-service.workspace = true

[lints]
workspace = true
