[package]
name = "conduwuit_database"
categories.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
path = "mod.rs"
crate-type = [
	"rlib",
#	"dylib",
]

[features]
io_uring = [
	"rust-rocksdb/io-uring",
]
jemalloc = [
	"conduwuit-core/jemalloc",
	"rust-rocksdb/jemalloc",
]
jemalloc_conf = [
	"conduwuit-core/jemalloc_conf",
]
jemalloc_prof = [
	"conduwuit-core/jemalloc_prof",
]
jemalloc_stats = [
	"conduwuit-core/jemalloc_stats",
]
release_max_log_level = [
	"conduwuit-core/release_max_log_level",
	"log/max_level_trace",
	"log/release_max_level_info",
	"tracing/max_level_trace",
	"tracing/release_max_level_info",
]
zstd_compression = [
	"conduwuit-core/zstd_compression",
	"rust-rocksdb/zstd",
]

[dependencies]
async-channel.workspace = true
conduwuit-core.workspace = true
const-str.workspace = true
futures.workspace = true
log.workspace = true
minicbor.workspace = true
minicbor-serde.workspace = true
rust-rocksdb.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
